Locations covered NAN issue fixed (#2422)

--- a/src/components/ui/PlanCard/plan-coverage/PlanCoverage.module.scss
+++ b/src/components/ui/PlanCard/plan-coverage/PlanCoverage.module.scss
@@ -129,4 +129,10 @@
       }
     }
   }
+  .notAllow {
+    cursor: not-allowed;
+    pointer-events: none;
+  }
 }
+
+
